# rectify-coords

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.am_new  Makefile.in  README  README.md  aclocal.m4  autogen.sh  autogen.sh_new  config.h  config.h.in  config.status  configure  configure.in  configure.in_new  libtool  redressement_demo.glade.bak  redressement_demo.gladep.bak
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: POTFILES  POTFILES.in
src/: .#point2D.h  Cadre.cc  Cadre.hh  Draw.cc  Draw.hh  DrawCadre.cc  DrawCadre.hh  DrawView.cc  DrawView.hh  Makefile  Makefile.am  Makefile.am_new  Makefile.in  Window1.cc  Window1.cc_new  Window1.hh  Window1.hh_new  Window1_glade.cc  Window1_glade.hh  point2D.hh  redressement_demo  redressement_demo.cc  redressement_demo.cc_new
src/.deps/: Cadre.Po  Draw.Po  DrawCadre.Po  DrawView.Po  Window1.Po  Window1_glade.Po  redressement_demo.Po
