# generated 2007/4/16 18:00:32 CEST by guillaume@pc-ludo-max2.(none)
# using glademm V2.6.0
#
# newer (non customized) versions of this file go to Makefile.am_new
bin_PROGRAMS = redressement_demo

redressement_demo_SOURCES = \
	redressement_demo.cc\
	Window1_glade.cc \
	Window1.cc \
	Cadre.cc \
	Draw.cc \
	DrawCadre.cc \
	DrawView.cc

noinst_HEADERS = \
	Window1_glade.hh \
	Window1.hh \
	Cadre.hh \
	Draw.hh \
	DrawCadre.hh \
	DrawView.hh

AM_CXXFLAGS = @GTKMM_CFLAGS@ 

redressement_demo_LDADD = @LIBS@ @GTKMM_LIBS@ 
